[package]
name = "arpege"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
